@@ -276,8 +276,6 @@ operator|new
 name|Term
 argument_list|(
 name|fieldName
-argument_list|,
-literal|""
 argument_list|)
 decl_stmt|;
 name|TermEnum
@@ -466,8 +464,6 @@ operator|new
 name|Term
 argument_list|(
 name|fieldName
-argument_list|,
-literal|""
 argument_list|)
 decl_stmt|;
 name|TermEnum
