@@ -2390,8 +2390,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 expr_stmt|;
