@@ -62,6 +62,25 @@ literal|true
 argument_list|)
 expr_stmt|;
 block|}
+comment|/** Constructs a Term with the given field and empty text.    * This serves two purposes: 1) reuse of a Term with the same field.    * 2) pattern for a query.    *     * @param fld    */
+DECL|method|Term
+specifier|public
+name|Term
+parameter_list|(
+name|String
+name|fld
+parameter_list|)
+block|{
+name|this
+argument_list|(
+name|fld
+argument_list|,
+literal|""
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+block|}
 DECL|method|Term
 name|Term
 parameter_list|(
