@@ -289,8 +289,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -534,8 +532,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -704,8 +700,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
