@@ -861,8 +861,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1106,8 +1104,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1351,8 +1347,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1596,8 +1590,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1793,8 +1785,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -1998,8 +1988,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -2286,8 +2274,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -2558,8 +2544,6 @@ operator|new
 name|Term
 argument_list|(
 name|field
-argument_list|,
-literal|""
 argument_list|)
 argument_list|)
 decl_stmt|;
